force-app/main/default/objects/Contract_Budget_Category__c/Contract_Budget_Category__c.object-meta.xml
<CustomObject>
    <label>Contract Budget Category</label>
    <nameField>
        <displayFormat>CBC-{0000}</displayFormat>
        <label>Contract Budget Category Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contract Budget Categories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>