force-app/main/default/objects/Contract_Budget_Category__c/fields/Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Contract Budget Categories</relationshipLabel>
    <relationshipName>Contract_Budget_Categories</relationshipName>
    <type>Lookup</type>
</CustomField>