force-app/main/default/objects/Contract_Budget_Category__c/fields/Metadata_ID__c.field-meta.xml
<CustomField>
    <fullName>Metadata_ID__c</fullName>
    <label>Metadata ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>