force-app/main/default/objects/Contract_Budget_Category__c/fields/Reimbursement_Table__c.field-meta.xml
<CustomField>
    <fullName>Reimbursement_Table__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reimbursement Table</label>
    <referenceTo>Reimbursement_Table__c</referenceTo>
    <relationshipLabel>Contract Budget Categories</relationshipLabel>
    <relationshipName>Contract_Budget_Categories</relationshipName>
    <type>Lookup</type>
</CustomField>