force-app/main/default/objects/Contract_Budget_Category__c/fields/Total_Number_of_Units__c.field-meta.xml
<CustomField>
    <fullName>Total_Number_of_Units__c</fullName>
    <formula>Reimbursement_Table__r.Total_Number_of_Units__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Number of Units</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>