force-app/main/default/objects/Contract_Budget_Category__c/fields/Unit_of_Service_Cost__c.field-meta.xml
<CustomField>
    <fullName>Unit_of_Service_Cost__c</fullName>
    <formula>Reimbursement_Table__r.Unit_of_Service_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unit of Service Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>